[gd_scene load_steps=12 format=3 uid="uid://bmj1urynsj1ph"]

[ext_resource type="Script" path="res://Scenes/Player/player_antigrav_v2.gd" id="1_4r3eb"]
[ext_resource type="Resource" uid="uid://b1rkom08snay1" path="res://Resources/SlowMovementData.tres" id="2_eofbi"]
[ext_resource type="SpriteFrames" uid="uid://dl3ymlg6n87id" path="res://Aesthethics/spacemanCharacter.tres" id="3_wn5jf"]
[ext_resource type="PackedScene" uid="uid://dhlrcql7c28e2" path="res://Scenes/Player/terrain_detector.tscn" id="4_7dsbk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pagqt"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_327wf"]
size = Vector2(6, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egt18"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbywd"]
size = Vector2(10, 15)

[sub_resource type="Animation" id="Animation_g1ca6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_aybdw"]
resource_name = "end_level"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [&"jump", 1.0, false],
"method": &"play"
}, {
"args": [&"poof", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wi07s"]
_data = {
"RESET": SubResource("Animation_g1ca6"),
"end_level": SubResource("Animation_aybdw")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
collision_layer = 2
collision_mask = 9
floor_constant_speed = true
safe_margin = 0.1
script = ExtResource("1_4r3eb")
movement_data = ExtResource("2_eofbi")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_wn5jf")
animation = &"poof"
autoplay = "idle"
frame = 4
frame_progress = 1.0
offset = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_pagqt")

[node name="Coyote Jump Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Wall Jump Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ResetMovementSpeedJump Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -24)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="HazardDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardDetector"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_327wf")

[node name="TerrainDetector" parent="." instance=ExtResource("4_7dsbk")]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TerrainDetector"]
shape = SubResource("RectangleShape2D_egt18")

[node name="SafeZoneDetector" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZoneDetector"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_jbywd")

[node name="HeartsContainer" type="Node2D" parent="."]
position = Vector2(-12, -15)

[node name="HeartLocation" type="Marker2D" parent="HeartsContainer"]

[node name="PickupDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wi07s")
}

[node name="WallSlideSticky" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animated_sprite_animation_finished"]
[connection signal="timeout" from="ResetMovementSpeedJump Timer" to="." method="_on_reset_movement_speed_timer_timeout"]
[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
[connection signal="body_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
[connection signal="terrain_entered" from="TerrainDetector" to="." method="_on_terrain_detector_terrain_entered"]
[connection signal="area_entered" from="SafeZoneDetector" to="." method="_on_safe_zone_detector_area_entered"]
[connection signal="area_exited" from="SafeZoneDetector" to="." method="_on_safe_zone_detector_area_exited"]
